[gd_scene load_steps=15 format=3 uid="uid://bpo0i3ad582ih"]

[ext_resource type="Script" path="res://Nodes/game_controller.gd" id="1_207ne"]
[ext_resource type="Texture2D" uid="uid://bwsewm7gueyjh" path="res://Assets/UI/Card X2.png" id="1_cbvra"]
[ext_resource type="Texture2D" uid="uid://bx66t0rqfa4un" path="res://Assets/UI/Card X3.png" id="2_vh3c5"]
[ext_resource type="Texture2D" uid="uid://cpjuphipo8rfm" path="res://Assets/UI/buttons/PaperNormal.png" id="3_nhcnp"]
[ext_resource type="LabelSettings" uid="uid://4p2jgfyhiofo" path="res://Assets/font/Text.tres" id="3_ofukd"]
[ext_resource type="Texture2D" uid="uid://cg8w36l3kqwux" path="res://Assets/UI/buttons/PaperActive.png" id="4_iuipv"]
[ext_resource type="Texture2D" uid="uid://3h06w5ppbkmc" path="res://Assets/UI/buttons/PaperHover.png" id="5_w8mmh"]
[ext_resource type="Texture2D" uid="uid://c4redo4dp1gmu" path="res://Assets/UI/buttons/RockNormal.png" id="6_mvrys"]
[ext_resource type="Texture2D" uid="uid://c3emfqp07uu2c" path="res://Assets/UI/buttons/RockActive.png" id="7_h13oi"]
[ext_resource type="Texture2D" uid="uid://d3k8xqfdwm83w" path="res://Assets/UI/buttons/RockHover.png" id="8_v4gys"]
[ext_resource type="Texture2D" uid="uid://cq7afuoera1q3" path="res://Assets/UI/buttons/TijerasNormal.png" id="9_wrr42"]
[ext_resource type="Texture2D" uid="uid://b30jj143knppu" path="res://Assets/UI/buttons/TijerasActive.png" id="10_p0vg1"]
[ext_resource type="Texture2D" uid="uid://csts8y5ryufxu" path="res://Assets/UI/buttons/TijerasHover.png" id="11_li5uh"]
[ext_resource type="AudioStream" uid="uid://bxjk5k3f4a7mv" path="res://Assets/sound/DOS-88 - City Stomper.mp3" id="14_cl88k"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_207ne")

[node name="PanelArriba" type="HBoxContainer" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 478.0
grow_horizontal = 2
alignment = 1

[node name="PanelJugador" type="TextureRect" parent="PanelArriba"]
layout_mode = 2
texture = ExtResource("1_cbvra")
expand_mode = 3

[node name="DibujarJugador" type="TextureRect" parent="PanelArriba/PanelJugador"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelIA2" type="TextureRect" parent="PanelArriba"]
layout_mode = 2
texture = ExtResource("1_cbvra")
expand_mode = 3

[node name="DibujarIA" type="TextureRect" parent="PanelArriba/PanelIA2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelAbajo" type="HBoxContainer" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -148.0
offset_right = 175.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="papelBoton" type="TextureButton" parent="PanelAbajo"]
layout_mode = 2
texture_normal = ExtResource("3_nhcnp")
texture_pressed = ExtResource("4_iuipv")
texture_hover = ExtResource("5_w8mmh")

[node name="piedraBoton" type="TextureButton" parent="PanelAbajo"]
layout_mode = 2
texture_normal = ExtResource("6_mvrys")
texture_pressed = ExtResource("7_h13oi")
texture_hover = ExtResource("8_v4gys")

[node name="tijeraBoton" type="TextureButton" parent="PanelAbajo"]
layout_mode = 2
texture_normal = ExtResource("9_wrr42")
texture_pressed = ExtResource("10_p0vg1")
texture_hover = ExtResource("11_li5uh")

[node name="Puntuacion" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -201.5
offset_top = -98.0
offset_right = 201.5
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
text = "Puntuacion: 0:0"
label_settings = ExtResource("3_ofukd")
horizontal_alignment = 2

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vh3c5")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_cl88k")
autoplay = true

[node name="Efectos" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="PanelAbajo/papelBoton" to="." method="_on_papel_boton_pressed"]
[connection signal="pressed" from="PanelAbajo/piedraBoton" to="." method="_on_piedra_boton_pressed"]
[connection signal="pressed" from="PanelAbajo/tijeraBoton" to="." method="_on_tijera_boton_pressed"]
